force-app/main/default/objects/Case/fields/dcp_Suggested_Contacts__c.field-meta.xml
<CustomField>
    <fullName>dcp_Suggested_Contacts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to search and select a contact that may be needed to complete the case - from an internal database</description>
    <label>Suggested Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Suggested Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Suggested Contact)</relationshipLabel>
    <relationshipName>SuggestedContacts</relationshipName>
    <type>Lookup</type>
</CustomField>