force-app/main/default/objects/Case/fields/DCP_Triage_Required__c.field-meta.xml
<CustomField>
    <fullName>DCP_Triage_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto checked by flow whenever case is created via email and web</description>
    <inlineHelpText>System did not find exact matching account/ market identifier details for email/web case and requires manual intervention</inlineHelpText>
    <label>Triage Required?</label>
    <type>Checkbox</type>
</CustomField>