force-app/main/default/objects/Case/fields/dcp_Validation_Code__c.field-meta.xml
<CustomField>
    <fullName>dcp_Validation_Code__c</fullName>
    <description>Captures validation code / error messages from storm submissions</description>
    <label>Validation Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone does not align to NMI/Meter</fullName>
            </value>
            <value>
                <fullName>Invalid NMI Checksum combination</fullName>
            </value>
            <value>
                <fullName>Neither name nor phone number align to NMI/Meter</fullName>
            </value>
            <value>
                <fullName>NMI timeslice matching the customer details is older than 25 months</fullName>
            </value>
            <value>
                <fullName>NMI and METER exist but do not have a relationship with each other</fullName>
            </value>
            <value>
                <fullName>NMI not in ADW</fullName>
            </value>
            <value>
                <fullName>Name does not align to NMI/Meter</fullName>
            </value>
            <value>
                <fullName>Meter not in ADW</fullName>
            </value>
            <value>
                <fullName>METER is unsupported. Is not a remotely read Type 5 meter</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>