force-app/main/default/objects/Case/fields/dcp_w2c_Enquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>dcp_w2c_Enquiry_Type__c</fullName>
    <description>placeholder to capture from web2case contact-us form</description>
    <inlineHelpText>placeholder to capture from web2case contact-us form</inlineHelpText>
    <label>Enquiry Type (W2C)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enquiry</fullName>
                <default>true</default>
                <label>Enquiry</label>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Compliment</fullName>
            </value>
            <value>
                <fullName>myHomeEnergy</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>