force-app/main/default/objects/Case/fields/dcp_w2c_First_Name__c.field-meta.xml
<CustomField>
    <fullName>dcp_w2c_First_Name__c</fullName>
    <description>Place holder for web2case First name field on contact-us webform.</description>
    <inlineHelpText>Place holder for web2case field on First name on contact-us web form.</inlineHelpText>
    <label>First Name (W2C)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>