force-app/main/default/objects/Case/fields/dcp_w2c_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>dcp_w2c_Last_Name__c</fullName>
    <description>Last name from web2case contact-us webform</description>
    <inlineHelpText>Last name from web2case contact-us webform</inlineHelpText>
    <label>Last Name (W2C)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>