force-app/main/default/objects/Case/fields/DCP_W2C_Market_Identifier__c.field-meta.xml
<CustomField>
    <fullName>DCP_W2C_Market_Identifier__c</fullName>
    <description>Field to store NMI/MIRN from contact us form on case</description>
    <label>Market Identifier (W2C)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>