force-app/main/default/objects/Case/fields/dcp_w2c_Meter_Number__c.field-meta.xml
<CustomField>
    <fullName>dcp_w2c_Meter_Number__c</fullName>
    <description>This is the meter number supplied by the customer on the relevant online form</description>
    <inlineHelpText>This is the meter number supplied by the customer on the relevant online form</inlineHelpText>
    <label>Meter Number (W2C)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>