force-app/main/default/objects/Case/fields/DER_Application__c.field-meta.xml
<CustomField>
    <fullName>DER_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DER Application</label>
    <referenceTo>DER_Application__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>