force-app/main/default/objects/Case/fields/DER_Application_Scenario__c.field-meta.xml
<CustomField>
    <fullName>DER_Application_Scenario__c</fullName>
    <label>DER Application Scenario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>