force-app/main/default/objects/Case/fields/DER_Application_Size__c.field-meta.xml
<CustomField>
    <fullName>DER_Application_Size__c</fullName>
    <description>Indicates on Case the size of the related DER Application</description>
    <formula>IF( 

AND(DER_Application__r.Total_System_Capacity__c  &gt;0.000, DER_Application__r.Total_System_Capacity__c  &lt;=30.000), 
&quot;&lt; 30&quot;, 

IF(AND(DER_Application__r.Total_System_Capacity__c  &gt;30.000, DER_Application__r.Total_System_Capacity__c  &lt;150.000),
&quot;&gt; 30&quot;,

IF(DER_Application__r.Total_System_Capacity__c  &gt;=150.000, 
&quot;&gt; 1.5&quot;, &quot;&quot;)

) 

)</formula>
    <inlineHelpText>This is displayed based on the Total System Capacity listed on the related DER Application.</inlineHelpText>
    <label>DER Application Size</label>
    <type>Text</type>
</CustomField>