force-app/main/default/objects/Case/fields/DER_Issue_Count__c.field-meta.xml
<CustomField>
    <fullName>DER_Issue_Count__c</fullName>
    <description>Stores the number of issues related to the Cases</description>
    <label>DER Issue Count</label>
    <summaryForeignKey>DER_Issue__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>