force-app/main/default/objects/Case/fields/DER_Offer_URL__c.field-meta.xml
<CustomField>
    <fullName>DER_Offer_URL__c</fullName>
    <label>DER Offer URL</label>
    <type>Url</type>
</CustomField>