force-app/main/default/objects/Case/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <description>New custom field created for DER ESC Performance Report</description>
    <formula>&quot;AusNet Services&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor</label>
    <type>Text</type>
</CustomField>