force-app/main/default/objects/Case/fields/Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>Doc_Type__c</fullName>
    <description>For financial Reports - Not for UI</description>
    <label>Doc Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>