force-app/main/default/objects/Case/fields/Document_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Date__c</fullName>
    <description>To be used in Financial Reporting, not for UI</description>
    <formula>TEXT(DAY(TODAY()))+&quot;.&quot; +TEXT(MONTH(TODAY()))+&quot;.&quot; +TEXT(YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Date</label>
    <type>Text</type>
</CustomField>