force-app/main/default/objects/Case/fields/Drawloop_Next1__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Next1__c</fullName>
    <formula>&quot;SFCase:&quot; &amp; Id &amp; &quot;;DDPId:&quot; &amp; $Setup.DDP_Settings__c.DDP_1_Id__c &amp; &quot;;Deploy:&quot; &amp; $Setup.DDP_Settings__c.Deploy_1_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drawloop_Next</label>
    <type>Text</type>
</CustomField>