force-app/main/default/objects/Case/fields/Drawloop_Next3__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Next3__c</fullName>
    <formula>IF( AusNet_Owned_Meter__c ,
    &quot;SFCase:&quot; &amp; Id &amp; &quot;;DDPId:&quot; &amp; $Setup.DDP_Settings__c.DDP_3_Id__c &amp; &quot;;Deploy:&quot; &amp; $Setup.DDP_Settings__c.Deploy_3_Id_AusNet_Meter__c,
    &quot;SFCase:&quot; &amp; Id &amp; &quot;;DDPId:&quot; &amp; $Setup.DDP_Settings__c.DDP_3_Id__c &amp; &quot;;Deploy:&quot; &amp; $Setup.DDP_Settings__c.Deploy_3_Id_Not_AusNet_Meter__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drawloop_Next</label>
    <type>Text</type>
</CustomField>