force-app/main/default/objects/Case/fields/Existing_DER__c.field-meta.xml
<CustomField>
    <fullName>Existing_DER__c</fullName>
    <description>To Check if there is an existing DER</description>
    <formula>AND( OR( RecordType.DeveloperName == &apos;DER_App_Manual&apos;,
         RecordType.DeveloperName == &apos;DER_App_Auto&apos;
       ) ,
     OR( ISPICKVAL( Type, &apos;Replacement&apos;),
         ISPICKVAL( Type, &apos;Augmentation&apos;),
         ISPICKVAL( Type, &apos;Upgrade&apos;),
         ISPICKVAL( Type, &apos;Abolishment&apos;)
       )
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing DER</label>
    <type>Checkbox</type>
</CustomField>