force-app/main/default/objects/Case/fields/FE_Communication_Client_Installed__c.field-meta.xml
<CustomField>
    <fullName>FE_Communication_Client_Installed__c</fullName>
    <label>Communication Client Installed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Droplet (gateway solution)</fullName>
            </value>
            <value>
                <fullName>Not installed</fullName>
            </value>
            <value>
                <fullName>Aggregated solution</fullName>
                <isActive>false</isActive>
                <label>Aggregated solution</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>