force-app/main/default/objects/Case/fields/FE_Compliant__c.field-meta.xml
<CustomField>
    <fullName>FE_Compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flexible Exports Compliant</label>
    <type>Checkbox</type>
</CustomField>