force-app/main/default/objects/Case/fields/FE_Is_Flexible_Export_Assessment_Opt_in__c.field-meta.xml
<CustomField>
    <fullName>FE_Is_Flexible_Export_Assessment_Opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean to show if customer has chosen to opt into flexible exports for solar installation</description>
    <label>Flexible Exports Assessment Opt-in</label>
    <type>Checkbox</type>
</CustomField>