force-app/main/default/objects/Case/fields/FE_Reg_Status__c.field-meta.xml
<CustomField>
    <fullName>FE_Reg_Status__c</fullName>
    <description>This will reflect the Flexible Exports Registration value from DER Application record on Case object</description>
    <formula>DER_Application__r.FE_Reg_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flexible Exports Registration</label>
    <type>Checkbox</type>
</CustomField>