force-app/main/default/objects/Case/fields/Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year__c</fullName>
    <description>New field created for DER ESC Performance Report</description>
    <label>Financial Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>