force-app/main/default/objects/Case/fields/FnP_DCP_SubType__c.field-meta.xml
<CustomField>
    <fullName>FnP_DCP_SubType__c</fullName>
    <label>SubType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliment</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>myHomeEnergy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Planned Outage</fullName>
            </value>
            <value>
                <fullName>Planned Outage Preference Management</fullName>
            </value>
            <value>
                <fullName>Tariffs</fullName>
            </value>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Unplanned Outages</fullName>
            </value>
            <value>
                <fullName>Vegetation Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>