force-app/main/default/objects/Case/fields/FnP_Number_of_Lights__c.field-meta.xml
<CustomField>
    <fullName>FnP_Number_of_Lights__c</fullName>
    <description>Captures the number of lights from the report a streetlight fault form</description>
    <label>Number of Lights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>