force-app/main/default/objects/Case/fields/FnP_Pole_Numbers__c.field-meta.xml
<CustomField>
    <fullName>FnP_Pole_Numbers__c</fullName>
    <description>Captures the pole numbers from the report a streetlight fault form</description>
    <label>Pole Number(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>