force-app/main/default/objects/Case/fields/FnP_Retailer_Service_Order__c.field-meta.xml
<CustomField>
    <fullName>FnP_Retailer_Service_Order__c</fullName>
    <description>Field to populate realer service order details for New Connection reques on Contact Us Form</description>
    <label>Retailer Service Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>