force-app/main/default/objects/Case/fields/FnP_Type_of_Fault__c.field-meta.xml
<CustomField>
    <fullName>FnP_Type_of_Fault__c</fullName>
    <description>Specifies the type of general streetlight fault</description>
    <label>Type of Fault</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LightIsOut</fullName>
                <label>Light is Out</label>
            </value>
            <value>
                <fullName>FlickeringLight</fullName>
                <label>Flickering Light</label>
            </value>
            <value>
                <fullName>DimLight</fullName>
                <label>Dim Light</label>
            </value>
            <value>
                <fullName>LightIsOn24/7</fullName>
                <label>Light is on 24/7</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>