force-app/main/default/objects/Case/fields/Installer_ABN__c.field-meta.xml
<CustomField>
    <fullName>Installer_ABN__c</fullName>
    <formula>Account.ABN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installer ABN</label>
    <type>Text</type>
</CustomField>