force-app/main/default/objects/Case/fields/Installer_Accreditation_No__c.field-meta.xml
<CustomField>
    <fullName>Installer_Accreditation_No__c</fullName>
    <formula>Account.ASPAccreditaionId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installer Accreditation No</label>
    <type>Text</type>
</CustomField>