force-app/main/default/objects/Case/fields/Installer_AddressLine1__c.field-meta.xml
<CustomField>
    <fullName>Installer_AddressLine1__c</fullName>
    <formula>Account.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installer AddressLine1</label>
    <type>Text</type>
</CustomField>