force-app/main/default/objects/Case/fields/Installer_AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>Installer_AddressLine2__c</fullName>
    <formula>Account.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installer AddressLine2</label>
    <type>Text</type>
</CustomField>