force-app/main/default/objects/Case/fields/Installer_Company__c.field-meta.xml
<CustomField>
    <fullName>Installer_Company__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installer Company</label>
    <type>Text</type>
</CustomField>