force-app/main/default/objects/Case/fields/Installer_Email__c.field-meta.xml
<CustomField>
    <fullName>Installer_Email__c</fullName>
    <formula>Contact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installer Email</label>
    <type>Text</type>
</CustomField>