force-app/main/default/objects/Case/fields/Installer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Installer_First_Name__c</fullName>
    <formula>Customer__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installer First Name</label>
    <type>Text</type>
</CustomField>