force-app/main/default/objects/Case/fields/Installer_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Installer_Last_Name__c</fullName>
    <formula>Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installer Last Name</label>
    <type>Text</type>
</CustomField>