force-app/main/default/objects/Case/fields/Installer_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Installer_Middle_Name__c</fullName>
    <formula>Contact.MiddleName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installer Middle Name</label>
    <type>Text</type>
</CustomField>