force-app/main/default/objects/Case/fields/Installer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Installer_Phone__c</fullName>
    <formula>Contact.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installer Phone</label>
    <type>Text</type>
</CustomField>