force-app/main/default/objects/Case/fields/Installer_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Installer_Postcode__c</fullName>
    <formula>Account.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installer Postcode</label>
    <type>Text</type>
</CustomField>