force-app/main/default/objects/Case/fields/Installer_Suburb__c.field-meta.xml
<CustomField>
    <fullName>Installer_Suburb__c</fullName>
    <formula>Account.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installer Suburb</label>
    <type>Text</type>
</CustomField>