force-app/main/default/objects/Case/fields/Invoice_Due_Notif_Date_fx__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Due_Notif_Date_fx__c</fullName>
    <formula>/* 2 Business Days after Invoice_Payment_Due_Date__c */
/* https://salesforce.stackexchange.com/questions/91880/date-formula-to-calculate-date-excluding-weekends */
CASE(
MOD(Invoice_Payment_Due_Date__c - DATE(1900, 1, 7), 7),
0, (Invoice_Payment_Due_Date__c ) + 2 + FLOOR((2-1)/5)*2,
1, (Invoice_Payment_Due_Date__c ) + 2 + FLOOR((2)/5)*2,
2, (Invoice_Payment_Due_Date__c ) + 2 + FLOOR((2+1)/5)*2,
3, (Invoice_Payment_Due_Date__c ) + 2 + FLOOR((2+2)/5)*2,
4, (Invoice_Payment_Due_Date__c ) + 2 + FLOOR((2+3)/5)*2,
5, (Invoice_Payment_Due_Date__c ) + 2 + CEILING((2)/5)*2,
6, (Invoice_Payment_Due_Date__c ) - IF(2&gt;0,1,0) + 2 + CEILING((2)/5)*2,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Due Notification Date</label>
    <type>Date</type>
</CustomField>