force-app/main/default/objects/Case/fields/Invoice_Paid__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If ticked, an invoice is paid. If unticked, an invoice is unpaid.</description>
    <label>Invoice Paid</label>
    <type>Checkbox</type>
</CustomField>