force-app/main/default/objects/Case/fields/Invoice_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Paid_Date__c</fullName>
    <description>The date the Invoice was paid</description>
    <label>Invoice Paid Date</label>
    <type>Date</type>
</CustomField>