force-app/main/default/objects/Case/fields/Invoice_Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Payment_Due_Date__c</fullName>
    <formula>Invoice_Raised_Date__c + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Payment Due Date</label>
    <type>Date</type>
</CustomField>