force-app/main/default/objects/Case/fields/Invoice_Raised_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Raised_Date__c</fullName>
    <description>The date the Invoice was raised</description>
    <label>Invoice Raised Date</label>
    <type>Date</type>
</CustomField>