force-app/main/default/objects/Case/fields/Invoice_Required__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If ticked, an invoice is required. If unticked, an invoice is not required.</description>
    <label>Invoice Required</label>
    <type>Checkbox</type>
</CustomField>