force-app/main/default/objects/Case/fields/Is_Prod__c.field-meta.xml
<CustomField>
    <fullName>Is_Prod__c</fullName>
    <formula>$Organization.Id = &apos;00D92000002aQT9UAY&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Prod</label>
    <type>Checkbox</type>
</CustomField>