force-app/main/default/objects/Case/fields/Meter_fx__c.field-meta.xml
<CustomField>
    <fullName>Meter_fx__c</fullName>
    <formula>IF( NOT(ISBLANK(DER_Application__r.Meter_Number__c)) , DER_Application__r.Meter_Number__c, &apos;N/A&apos;)</formula>
    <label>Meter</label>
    <type>Text</type>
</CustomField>