force-app/main/default/objects/Case/fields/Meter_Number__c.field-meta.xml
<CustomField>
    <fullName>Meter_Number__c</fullName>
    <description>Used on Reconnect After Fault RT</description>
    <label>Meter Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>