force-app/main/default/objects/Case/fields/More_Info_Required_fx__c.field-meta.xml
<CustomField>
    <fullName>More_Info_Required_fx__c</fullName>
    <formula>/* 5 Business Days after Case status set */
/* https://salesforce.stackexchange.com/questions/91880/date-formula-to-calculate-date-excluding-weekends */
CASE(
MOD(DATEVALUE(Case_Status_Set__c) - DATE(1900, 1, 7), 7),
0, DATEVALUE(Case_Status_Set__c ) + 5 + FLOOR((5-1)/5)*2,
1, DATEVALUE(Case_Status_Set__c ) + 5 + FLOOR((5)/5)*2,
2, DATEVALUE(Case_Status_Set__c ) + 5 + FLOOR((5+1)/5)*2,
3, DATEVALUE(Case_Status_Set__c ) + 5 + FLOOR((5+2)/5)*2,
4, DATEVALUE(Case_Status_Set__c ) + 5 + FLOOR((5+3)/5)*2,
5, DATEVALUE(Case_Status_Set__c ) + 5 + CEILING((5)/5)*2,
6, DATEVALUE(Case_Status_Set__c ) - IF(5&gt;0,1,0) + 5 + CEILING((5)/5)*2,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>More Info Required_fx</label>
    <type>Date</type>
</CustomField>