force-app/main/default/objects/Case/fields/NMI_fx__c.field-meta.xml
<CustomField>
    <fullName>NMI_fx__c</fullName>
    <formula>IF(NOT(ISBLANK(DER_Application__r.NMI__r.NMI__c)), DER_Application__r.NMI__r.NMI__c, &apos;N/A&apos;)</formula>
    <label>NMI</label>
    <type>Text</type>
</CustomField>