force-app/main/default/objects/Case/fields/NMI_PostCode_fx__c.field-meta.xml
<CustomField>
    <fullName>NMI_PostCode_fx__c</fullName>
    <formula>IF(NOT(ISBLANK(DER_Application__r.NMI__r.NMI_Ref__c)), DER_Application__r.NMI__r.Post_Code__c, &apos;N/A&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NMI PostCode</label>
    <type>Text</type>
</CustomField>