force-app/main/default/objects/Case/fields/Offer_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Accepted_Date__c</fullName>
    <description>Email merge field</description>
    <label>Offer Accepted Date</label>
    <type>Date</type>
</CustomField>