force-app/main/default/objects/Case/fields/Offer_Expires_In_Days_fx__c.field-meta.xml
<CustomField>
    <fullName>Offer_Expires_In_Days_fx__c</fullName>
    <formula>Offer_Expiration_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Expires In (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>