force-app/main/default/objects/Case/fields/Offer_Sent_and_negotiated_fx__c.field-meta.xml
<CustomField>
    <fullName>Offer_Sent_and_negotiated_fx__c</fullName>
    <formula>/* 20 Business Days after Case status set */
/* https://salesforce.stackexchange.com/questions/91880/date-formula-to-calculate-date-excluding-weekends */
CASE(
MOD(DATEVALUE(Case_Status_Set__c) - DATE(1900, 1, 7), 7),
0, DATEVALUE(Case_Status_Set__c ) + 20 + FLOOR((20-1)/5)*2,
1, DATEVALUE(Case_Status_Set__c ) + 20 + FLOOR((20)/5)*2,
2, DATEVALUE(Case_Status_Set__c ) + 20 + FLOOR((20+1)/5)*2,
3, DATEVALUE(Case_Status_Set__c ) + 20 + FLOOR((20+2)/5)*2,
4, DATEVALUE(Case_Status_Set__c ) + 20 + FLOOR((20+3)/5)*2,
5, DATEVALUE(Case_Status_Set__c ) + 20 + CEILING((20)/5)*2,
6, DATEVALUE(Case_Status_Set__c ) - IF(20&gt;0,1,0) + 20 + CEILING((20)/5)*2,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Sent and negotiated fx</label>
    <type>Date</type>
</CustomField>