force-app/main/default/objects/Case/fields/Payment_Date_Arrives_In_Fx__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date_Arrives_In_Fx__c</fullName>
    <formula>Invoice_Payment_Due_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Date Arrives In(Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>