force-app/main/default/objects/Case/fields/PI_1_Reminder_Date_fx__c.field-meta.xml
<CustomField>
    <fullName>PI_1_Reminder_Date_fx__c</fullName>
    <formula>/* 20 Business Days after  Offer_Accepted_Date__c */
/* https://salesforce.stackexchange.com/questions/91880/date-formula-to-calculate-date-excluding-weekends */
CASE(
MOD(Offer_Accepted_Date__c  - DATE(1900, 1, 7), 7),
0, (Offer_Accepted_Date__c ) + 20 + FLOOR((20-1)/5)*2,
1, (Offer_Accepted_Date__c ) + 20 + FLOOR((20)/5)*2,
2, (Offer_Accepted_Date__c ) + 20 + FLOOR((20+1)/5)*2,
3, (Offer_Accepted_Date__c ) + 20 + FLOOR((20+2)/5)*2,
4, (Offer_Accepted_Date__c ) + 20 + FLOOR((20+3)/5)*2,
5, (Offer_Accepted_Date__c ) + 20 + CEILING((20)/5)*2,
6, (Offer_Accepted_Date__c ) - IF(20&gt;0,1,0) + 20 + CEILING((20)/5)*2,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PI - 1 Reminder Date</label>
    <type>Date</type>
</CustomField>