force-app/main/default/objects/Case/fields/Post_Installation_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_Installation_Expiry_Date__c</fullName>
    <description>To populate offer accepted date from agreement</description>
    <label>Post Installation Expiry Date</label>
    <type>Date</type>
</CustomField>