force-app/main/default/objects/Case/fields/RAF_Able_to_provide_NMI_or_meter_number__c.field-meta.xml
<CustomField>
    <fullName>RAF_Able_to_provide_NMI_or_meter_number__c</fullName>
    <inlineHelpText>Are you able to provide the NMI or meter number of the impacted property</inlineHelpText>
    <label>Able to provide NMI or meter number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>