force-app/main/default/objects/Case/fields/RAF_Additional_details_about_outage__c.field-meta.xml
<CustomField>
    <fullName>RAF_Additional_details_about_outage__c</fullName>
    <label>Additional details about outage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>