force-app/main/default/objects/Case/fields/RAF_Anyone_reliant_on_life_supprt_device__c.field-meta.xml
<CustomField>
    <fullName>RAF_Anyone_reliant_on_life_supprt_device__c</fullName>
    <inlineHelpText>Are you or anyone on the premises reliant on a life support device?</inlineHelpText>
    <label>Anyone reliant on life support device?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>